[package]
name = "nube-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest_dav = "0.1.11"
tokio = { version = "1.38.0", features = ["full"] }
url = {version = "2.5.2", features = ["serde"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.95"
urlencoding = "2.1.3"
toml = "0.8.14"