[package]
name = "nube-sync"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true


[[bin]]
name = "nubesync"
path = "src/main.rs"

[dependencies]
reqwest_dav = "0.1.11"
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.95"
urlencoding = "2.1.3"
toml = "0.8.14"
clap = { version = "4.5.4", features = ["derive"] }
openssl = { version = "0.10.66", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
getset = { version = "0.1.2", optional = true }
named-ctor = { version = "0.1.1", optional = true }

[features]
version_migration = ["dep:named-ctor", "dep:getset"]
